--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -23,18 +23,18 @@ button.shared.ok = Ok
 button.shared.cancel = Cancel
 
 
-###################### Project ########################
+###################### Artifact ########################
 
 #0 file #1 digest, #2 digest 6 characters  
-#appears in the project composite while the digest is being calculated. This should be a very short time!
-message.project.digestDetermined = The selected item was defined in file {0}
+#appears in the artifact composite while the digest is being calculated. This should be a very short time!
+message.artifact.digestDetermined = The selected item was defined in file {0}
 
 ###################### LinkToProject ########################
 
 #0 file #1 digest, #2 digest 6 characters
 #3 projectData
 #4 groupId #5 artifactId #6 version  
-message.link.projectDetermined = File: {0}\nDigest {1}\nIf you think that the jar has been linked to the wrong project, you can edit it below
+message.link.artifactDetermined = File: {0}\nDigest {1}\nIf you think that the jar has been linked to the wrong project, you can edit it below
 
 #0 file #1 digest #2 digest 6 characters
 message.link.unknownDigest = File: {0}\n\
@@ -68,7 +68,7 @@ To work out the GroupId, ArtifactId and Version for this jar:\n\
 #0 file #1 digest, #2 digest 6 characters
 #3 projectData
 #4 groupId #5 artifactId #6 version  
-message.manualImport.projectDetermined=\
+message.manualImport.artifactDetermined=\
 These values should be the same as those used by Maven (if the project is maven-enabled)
 
 error.manualImport.fileUnknown= Unsure about which file is being added. Select something in workspace
@@ -78,7 +78,7 @@ error.manualImport.digestUnknown= Do not have value of digest for file {0}
 #0 for identifier
 error.manualImport.illegalIdentifier=Value of {0} has illegal characters. Letters, numbers, dot and minus are allowed
 
-error.manualImport.projectDataUnchanged = Project Data has not changed
+error.manualImport.artifactDataUnchanged = Project Data has not changed
 
 key.manualImport.groupId= Group Id
 key.manualImport.artifactId= Artifact Id
@@ -95,6 +95,8 @@ job.manualImport.title =Manual import of {0}:{1}-{2}
 
 
 ###################### Button tooltips ########################
+
+
 action.actionBar.stackoverflow.tooltip = Stackoverflow
 action.actionBar.stackoverflow.suffix = Stackoverflow
 
@@ -136,4 +138,4 @@ message.test.unknownDigest = File {0} Digest {1} Digest6 {2}
 #0 file #1 digest, #2 digest 6 characters
 #3 projectData
 #4 groupId #5 artifactId #6 version  message.test.projectDetermined = 
-message.test.projectDetermined File {0} Digest {1} Digest6 {2} ProjectData {3} GroupId {4} ArtifactId {5} Version {6}
+message.test.artifactDetermined File {0} Digest {1} Digest6 {2} ArtifactData {3} GroupId {4} ArtifactId {5} Version {6}
