--- a/org.softwarefm.softwarefm/.classpath
+++ b/org.softwarefm.softwarefm/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/org.softwarefm.utilities"/>
 	<classpathentry exported="true" kind="lib" path="lib/commands-3.3.0-I20070605-0010.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
