--- a/org.softwarefm.softwarefm/.classpath
+++ b/org.softwarefm.softwarefm/.classpath
@@ -21,6 +21,6 @@
 	<classpathentry kind="lib" path="lib/sisu-guice-2.1.7-noaop.jar"/>
 	<classpathentry kind="lib" path="lib/sisu-inject-bean-1.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/sisu-inject-plexus-1.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/org.softwarefm.utilities"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
