--- a/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
+++ b/org.softwarefm.eclipse/src/main/resources/org/softwarefm/eclipse/text.properties
@@ -20,6 +20,7 @@ message.shared.notAJar =The selected item was defined in file {0} which isn''t a
 error.shared.needsValue = Need value for {0}
 
 button.shared.ok = Ok
+button.shared.problems = !
 button.shared.cancel = Cancel
 
 
