--- a/org.softwarefm.eclipse/pom.xml
+++ b/org.softwarefm.eclipse/pom.xml
@@ -3,6 +3,10 @@
    <groupId>org.softwarefm</groupId>
    <artifactId>eclipse</artifactId>
    <version>0.0.1-SNAPSHOT</version>
+   <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   </properties>
+
    <repositories>
       <repository>
          <id>swt-repo</id>
@@ -41,6 +45,11 @@
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-plugin-api</artifactId>
          <version>3.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.miglayout</groupId>
+         <artifactId>miglayout-swt</artifactId>
+         <version>4.2</version>
       </dependency>
    </dependencies>
 </project>
