--- a/org.softwarefm.softwarefm/.classpath
+++ b/org.softwarefm.softwarefm/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry kind="lib" path="lib/sisu-inject-bean-1.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/sisu-inject-plexus-1.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/org.softwarefm.utilities"/>
+	<classpathentry kind="lib" path="lib/miglayout-core-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/miglayout-swt-4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
