--- a/org.softwarefm.softwarefm/build.properties
+++ b/org.softwarefm.softwarefm/build.properties
@@ -22,5 +22,7 @@ bin.includes = plugin.xml,\
                lib/sisu-guice-2.1.7-noaop.jar,\
                lib/sisu-inject-bean-1.4.2.jar,\
                lib/sisu-inject-plexus-1.4.2.jar,\
-               lib/utilities-0.0.1-SNAPSHOT.jar
+               lib/utilities-0.0.1-SNAPSHOT.jar,\
+               lib/miglayout-core-4.2.jar,\
+               lib/miglayout-swt-4.2.jar
 src.excludes = src/test/java/
