--- a/org.softwarefm.utilities/pom.xml
+++ b/org.softwarefm.utilities/pom.xml
@@ -3,6 +3,9 @@
    <groupId>org.softwarefm</groupId>
    <artifactId>utilities</artifactId>
    <version>0.0.1-SNAPSHOT</version>
+   <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   </properties>
    <dependencies>
       <dependency>
          <groupId>junit</groupId>
