--- a/org.softwarefm.utilities/pom.xml
+++ b/org.softwarefm.utilities/pom.xml
@@ -22,5 +22,11 @@
          <artifactId>jdom</artifactId>
          <version>1.1.3</version>
       </dependency>
+      <dependency>
+         <groupId>org.easymock</groupId>
+         <artifactId>easymock</artifactId>
+         <version>3.0</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
