--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,6 +18,11 @@
          <version>0.0.1-SNAPSHOT</version>
       </dependency>
       <dependency>
+         <groupId>org.softwarefm</groupId>
+         <artifactId>httpServer</artifactId>
+         <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-jdbc</artifactId>
          <version>3.1.0.RELEASE</version>
