--- a/eclipse/.classpath
+++ b/eclipse/.classpath
@@ -23,7 +23,7 @@
 	<classpathentry kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/utilities"/>
 	<classpathentry kind="lib" path="lib/miglayout-core-4.2.jar"/>
 	<classpathentry kind="lib" path="lib/miglayout-swt-4.2.jar"/>
-	<classpathentry kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar" sourcepath="/core"/>
 	<classpathentry kind="lib" path="lib/shared-0.0.1-SNAPSHOT.jar" sourcepath="/shared"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
