--- a/mavenRip/.settings/org.eclipse.core.resources.prefs
+++ b/mavenRip/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Thu Jan 24 09:42:32 GMT 2013
+#Tue Feb 05 18:56:31 GMT 2013
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
