--- a/mavenRip/pom.xml
+++ b/mavenRip/pom.xml
@@ -32,5 +32,17 @@
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.21</version>
       </dependency>
+      <dependency>
+         <groupId>org.neo4j</groupId>
+         <artifactId>neo4j</artifactId>
+         <version>${neo4j-version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.neo4j</groupId>
+         <artifactId>neo4j-kernel</artifactId>
+         <version>${neo4j-version}</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
