--- a/eclipse/.classpath
+++ b/eclipse/.classpath
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/easymock-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdom-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-artifact-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-model-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-plugin-api-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/miglayout-core-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/miglayout-swt-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plexus-classworlds-2.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plexus-component-annotations-1.5.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plexus-utils-2.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/shared-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sisu-guice-2.1.7-noaop.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sisu-inject-bean-1.4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sisu-inject-plexus-1.4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/easymock-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.1.jar"/>
-	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/maven-artifact-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/maven-model-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/maven-plugin-api-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/plexus-classworlds-2.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/plexus-component-annotations-1.5.4.jar"/>
-	<classpathentry kind="lib" path="lib/plexus-utils-2.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/sisu-guice-2.1.7-noaop.jar"/>
-	<classpathentry kind="lib" path="lib/sisu-inject-bean-1.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/sisu-inject-plexus-1.4.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/utilities-0.0.1-SNAPSHOT.jar" sourcepath="/utilities"/>
-	<classpathentry exported="true" kind="lib" path="lib/miglayout-core-4.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/miglayout-swt-4.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar" sourcepath="/core"/>
-	<classpathentry exported="true" kind="lib" path="lib/shared-0.0.1-SNAPSHOT.jar" sourcepath="/shared"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
