--- a/eclipse/.classpath
+++ b/eclipse/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-0.0.1-SNAPSHOT.jar" sourcepath="/core"/>
 	<classpathentry exported="true" kind="lib" path="lib/easymock-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.1.jar"/>
