--- a/eclipse/plugin.xml
+++ b/eclipse/plugin.xml
@@ -15,6 +15,13 @@
 				class="org.softwarefm.eclipse.views.CodeView"
 				id="org.softwarefm.eclipse.views.ClassAndMethodView">
 		</view>
+		<view
+				name="MyCode"
+				icon="icons/class.png"
+				category="org.softwarefm"
+				class="org.softwarefm.eclipse.views.MyCodeView"
+				id="org.softwarefm.eclipse.views.MyClassAndMethodView">
+		</view>
 
 		<view
 				name="Artifact"
@@ -59,25 +66,63 @@
 		</page>
 
 	</extension>
+	
 	<extension point="org.eclipse.core.resources.markers" id="org.softwarefm.code.marker"
 			name="Code Marker">
 		<super type="org.eclipse.core.resources.textmarker"/>
 		<super type="org.eclipse.core.resources.marker"/>
 		<persistent value="false"/>
 	</extension>
+	
+	<extension point="org.eclipse.core.resources.markers" id="org.softwarefm.code.marker.global"
+			name="Code Marker">
+		<super type="org.softwarefm.code.marker"/>
+		<persistent value="false"/>
+	</extension>
+	
+	<extension point="org.eclipse.core.resources.markers" id="org.softwarefm.code.marker.personal"
+			name="Code Marker">
+		<super type="org.softwarefm.code.marker"/>
+		<persistent value="false"/>
+	</extension>
 
 	<extension point="org.eclipse.ui.editors.annotationTypes">
 		<type markerSeverity="0"
 				super="org.eclipse.ui.workbench.texteditor.info"
-				name="org.softwarefm.code.annotation"
-				markerType="org.softwarefm.code.marker"/>
+				name="org.softwarefm.code.annotation.global"
+				markerType="org.softwarefm.code.marker.global"/>
+	</extension>
+	
+	<extension point="org.eclipse.ui.editors.annotationTypes">
+		<type markerSeverity="0"
+				super="org.eclipse.ui.workbench.texteditor.info"
+				name="org.softwarefm.code.annotation.personal"
+				markerType="org.softwarefm.code.marker.personal"/>
 	</extension>
 
 	<extension point="org.eclipse.ui.editors.markerAnnotationSpecification"
 			id="org.softwarefm.code.specification" name="SoftwareFMAnnotation">
-		<specification annotationType="org.softwarefm.code.annotation"
+		<specification annotationType="org.softwarefm.code.annotation.global"
 				label="Software FM code"
-				icon="icons/signpost.gif"
+				icon="icons/signCode.gif"
+				overviewRulerPreferenceKey="clruler"
+				overviewRulerPreferenceValue="true"
+				colorPreferenceKey="clcolor"
+				colorPreferenceValue="255,255,0"
+				textPreferenceKey="cltext"
+				textPreferenceValue="true"
+				verticalRulerPreferenceKey="clvertical"
+				verticalRulerPreferenceValue="true"
+				textStylePreferenceKey="clstyle"
+				textStylePreferenceValue="BOX">
+		</specification>
+	</extension>
+
+	<extension point="org.eclipse.ui.editors.markerAnnotationSpecification"
+			id="org.softwarefm.code.specification" name="SoftwareFMAnnotation">
+		<specification annotationType="org.softwarefm.code.annotation.personal"
+				label="Software FM code"
+				icon="icons/signUser.gif"
 				overviewRulerPreferenceKey="clruler"
 				overviewRulerPreferenceValue="true"
 				colorPreferenceKey="clcolor"
